	* New adaptive help system: commands that are disabled from commandline or settings will no longer appear in /help or autocomplete
	* Made the "hide messages" section in the "settings" dialog a little prettier
	* Added an option to the config file: enable/disable commands entered into the text input
	* Added new option to the "settings" dialog

Version 0.850
	* Changed the splash logo
	* Added qt5reactor to the distribution
	* Added qt5reactor to the credits in the "about" dialog
	* Reworked the "about" dialog (using tabs now, "about" and "credits")
	* Using a 200x200px image for the "erk button" image in the about dialog
	* Added a new "Nutjob Laboratories" image to the about dialog
	* Log file names now make the server/hostname all lowercase (so that servers with mis-cased network names are treated the same)
	* Export log dialog now makes the network named all uppercase
	* Style file names now make the server/hostname all lowercase
	* Package export dialog now shows the package name rather than just the directory name
	* Package export dialog now shows the package icon (if it exists)
	* Changed the package export dialog text to "export plugin" from "export package"
	* Package export dialog can now show single (not in a package) plugins
	* Package exporting can now handle single plugin files (that is, files not in a package)
	* Cleaned up the export log dialog
	* Menubar on the style editor now matches the menubar on the connection dialog in appearance
	* Cleaned up the export log dialog some more...with feeling this time :-)
	* Using the Ctrl+F or Ctrl+R hotkeys in the plugin editor will now pass any highlighted words to find/find & replace dialog
	* Cleaned up the server settings menu
	* Bugfix: plugin and template generator didn't always escape quotes properly
	* Reformatted the plugin/template generator dialog
	* Added new entries for author, version, and website to the plugin/template generator dialog